# CLI

./: .gitignore  COMPLETE_SUMMARY.txt  DEPLOYMENT_FEATURE_SUMMARY.md  DEPLOYMENT_QUICK_REFERENCE.md  Dockerfile  FINAL_IMPLEMENTATION.txt  README.md  jenkinsfile  pyproject.toml  requirements.txt  s.txt  setup.py  test_workflow.py
cicd_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/: detector.py  generator.py  main.py  models.py
core/: __init__.py  base_generator.py
frameworks/: __init__.py
frameworks/dotnet/: __init__.py  detector.py  generator.py
frameworks/dotnet/templates/: Dockerfile.j2  Jenkinsfile.j2
frameworks/gradle/: __init__.py  detector.py  generator.py
frameworks/gradle/templates/: Dockerfile.j2  Jenkinsfile.j2
frameworks/java/: detector.py
frameworks/maven/: generator.py
frameworks/maven/templates/: Dockerfile.j2  Jenkinsfile.j2
frameworks/node/: generator.py
frameworks/node/templates/: Jenkinsfile.j2  github-actions.yml.j2
frameworks/python/: __init__.py  detector.py  generator.py
frameworks/python/templates/: Jenkinsfile.j2  github-actions.yml.j2
frameworks/python/templates/python/: config.schema.yaml
python/: jenkinsfile
templates/: docker_test.j2  jenkins_test.j2
templates/python/: jenkinsfile.j2
test-flask-app/: jenkinsfile
tests/: MANUAL_DEPLOYMENT_NOTES.md
tests/test-dotnet-webapp/: .gitlab-ci.yml  Dockerfile  Jenkinsfile  test-dotnet-webapp.csproj
tests/test-dotnet-webapp/.github/workflows/: ci-cd.yml
tests/test-flask-app/: .gitlab-ci.yml  CICD_README.md  Dockerfile  Jenkinsfile  jenkinsfile
tests/test-flask-app/.github/workflows/: ci.yml
tests/test-java-gradle/: .gitlab-ci.yml  Dockerfile  Jenkinsfile  build.gradle
tests/test-java-gradle/.github/workflows/: ci-cd.yml
tests/test-java-maven/: .gitlab-ci.yml  Dockerfile  Jenkinsfile  pom.xml
tests/test-java-maven/src/main/java/com/example/: App.java
tests/test-node-app/: .gitlab-ci.yml  Dockerfile  Jenkinsfile  package-lock.json  package.json
tests/test-node-app/.github/workflows/: ci-cd.yml
