[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cicd-cli"
version = "0.1.0"
dependencies = [
    "typer[all]>=0.9.0",
    "jinja2>=3.1.2",
    "rich>=13.7.0",
    "pydantic<2",
]

[project.scripts]
cicd = "cli.main:app"

[tool.setuptools]
packages = [
    "cli",
    "core",
    "frameworks",
    "frameworks.python",
    "frameworks.node",
    "frameworks.maven",
    "frameworks.gradle",
    "frameworks.java"
]

[tool.setuptools.package-data]
"frameworks.python" = ["templates/*.j2"]
"frameworks.node" = ["templates/*.j2"]
"frameworks.maven" = ["templates/*.j2"]
"frameworks.gradle" = ["templates/*.j2"]
"frameworks.java" = ["templates/*.j2"]